Archive2/df/3d63a9917fe6f7/output
+ g++ -g -std=c++11 -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter main.cpp
main.cpp: In function 'int main()':
main.cpp:12:11: error: wrong number of template arguments (1, should be 2)
     foo<1L> f2;
           ^
main.cpp:4:8: error: provided for 'template<int I, long int L> struct foo'
 struct foo {};
        ^
main.cpp:12:15: error: invalid type in declaration before ';' token
     foo<1L> f2;
               ^
